--- a/css-reset.css
+++ b/css-reset.css
@@ -1,6 +1,9 @@
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
+
+   Dev by marcoaurelio at techsolutio.com
+   
 */
 
 html, body, div, span, applet, object, iframe,
